WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88370
Memory sampler should trigger low memory signal
https://bugs.webkit.org/show_bug.cgi?id=88370
Summary
Memory sampler should trigger low memory signal
Stephanie Lewis
Reported
2012-06-05 15:42:38 PDT
When using the memory sampler we should also trigger the low memory signal. We want to track memory that cannot be returned to the system, when it is under pressure.
Attachments
patch
(6.27 KB, patch)
2012-06-05 15:52 PDT
,
Stephanie Lewis
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephanie Lewis
Comment 1
2012-06-05 15:52:58 PDT
Created
attachment 145885
[details]
patch
Geoffrey Garen
Comment 2
2012-06-05 16:16:22 PDT
Comment on
attachment 145885
[details]
patch r=me
Stephanie Lewis
Comment 3
2012-06-05 18:38:53 PDT
Committed
http://trac.webkit.org/projects/webkit/changeset/119546
Stephanie Lewis
Comment 4
2012-11-05 14:42:46 PST
<
rdar://problem/12639150
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug