https://bugs.webkit.org/show_bug.cgi?id=88370 Memory sampler should trigger low memory signal

Reviewed by Geoff Garen.

Source/WebCore:

No new tests. Verify by running stress test which crashes
in a few minutes without the fix.

Fix assumption in block code.  We could get in a state where timer_event_source
had already been released before the block ran.

* platform/mac/MemoryPressureHandlerMac.mm:
(WebCore::MemoryPressureHandler::holdOff):

Source/WebKit2:

Send low memory signal when running the memory sampler.  We'd
like to test memory that cannot be freed.

* Shared/WebMemorySampler.cpp:
(WebKit::WebMemorySampler::sampleTimerFired):
* Shared/WebMemorySampler.h:
(WebMemorySampler):
* Shared/mac/WebMemorySampler.mac.mm:
(WebKit):
(WebKit::WebMemorySampler::sendMemoryPressureEvent):

Canonical link: https://commits.webkit.org/106208@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119546 268f45cc-cd09-0410-ab3c-d52691b4dbfc